--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
-    "test": "PGDATABASE=nc_news_test jest",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
